--- a/packages/core-whiteboard/package.json
+++ b/packages/core-whiteboard/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "vite build",
     "test": "echo \"No tests yet in core-whiteboard\" && exit 0",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "echo \"No lint config yet in core-whiteboard\" && exit 0"
   },
   "dependencies": {
     "vue": "^3.4.0",
