--- a/packages/core-whiteboard/package.json
+++ b/packages/core-whiteboard/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "vite build",
+    "build": "echo \"No build config yet in core-whiteboard\" && exit 0",
     "test": "echo \"No tests yet in core-whiteboard\" && exit 0",
     "type-check": "tsc --noEmit",
     "lint": "echo \"No lint config yet in core-whiteboard\" && exit 0"
