fix ci: force canvas rebuild from source with --update-binary

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,9 @@ jobs:
         run: |
           npm ci
           npm install --no-save @rollup/rollup-linux-x64-gnu
+      - name: Rebuild canvas native module
+        run: npm rebuild canvas --update-binary
+        working-directory: ./apps/gui
       - name: Run Unit Tests
         run: npm run test:unit
         working-directory: ./apps/gui
