--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,17 +41,10 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-      - name: Install system dependencies for canvas
+      - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev
-      - name: Clear npm cache and install dependencies
-        run: |
-          npm cache clean --force
           npm ci
           npm install --no-save @rollup/rollup-linux-x64-gnu
-      - name: Rebuild canvas native module
-        run: npm rebuild canvas --update-binary
       - name: Run Unit Tests
         run: npm run test:unit
         working-directory: ./apps/gui
