--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -114,26 +114,27 @@
   "devDependencies": {
     "@playwright/test": "^1.40.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "@vitejs/plugin-vue": "^5.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/coverage-v8": "^4.0.15",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.22",
     "concurrently": "^8.2.2",
     "electron": "^29.4.6",
     "electron-builder": "^24.9.0",
     "esbuild": "^0.19.12",
-    "jsdom": "^23.0.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.26.0",
+    "jsdom": "^27.2.0",
     "playwright": "^1.40.0",
     "postcss": "^8.5.6",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0",
+    "vite": "^7.2.6",
     "vite-plugin-electron": "^0.28.4",
     "vite-plugin-electron-renderer": "^0.14.6",
-    "vitest": "^1.0.0",
-    "wait-on": "^7.2.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.26.0",
-    "@typescript-eslint/parser": "^7.11.0",
-    "@typescript-eslint/eslint-plugin": "^7.11.0"
+    "vitest": "^4.0.15",
+    "vitest-canvas-mock": "^1.1.3",
+    "wait-on": "^7.2.0"
   }
 }
