--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -19,7 +19,7 @@
   },
   "build": {
     "appId": "com.promptboard.app",
-    "productName": "Promptboard",
+    "productName": "PromptBoard",
     "electronVersion": "28.0.0",
     "directories": {
       "output": "release"
