--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -1,16 +1,33 @@
 {
-  "name": "@promptboard/gui",
+  "name": "promptboard",
   "version": "0.1.0",
   "type": "module",
-  "description": "Visual Context Buffer for AI Agents",
+  "description": "Visual Context Buffer MCP Server for AI Agents",
   "author": "Jueon Park",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pjueon/promptboard.git"
+  },
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "whiteboard",
+    "visual-context",
+    "ai-agent",
+    "claude"
+  ],
   "main": "dist-electron/main/index.mjs",
+  "bin": {
+    "promptboard": "./dist/mcp-bridge.cjs"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build && npm run build:mcp && npm run verify",
     "build:mcp": "node scripts/build-mcp.js",
     "verify": "node scripts/verify-build.js",
     "mcp": "node dist/mcp-bridge.cjs",
+    "postinstall": "node scripts/download-binary.js",
     "type-check": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx,.vue",
     "test": "vitest run && playwright test",
@@ -102,18 +119,15 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "@types/fabric": "^5.3.10",
-    "@types/ws": "^8.18.1",
-    "fabric": "^5.5.2",
-    "lucide-vue-next": "^0.294.0",
-    "pinia": "^2.3.1",
-    "vue": "^3.4.0",
-    "vue-i18n": "^9.14.5",
+    "adm-zip": "^0.5.10",
     "ws": "^8.18.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/fabric": "^5.3.10",
+    "@types/node": "^20.10.0",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "@vitejs/plugin-vue": "^5.0.0",
@@ -126,7 +140,10 @@
     "esbuild": "^0.19.12",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
+    "fabric": "^5.5.2",
     "jsdom": "^27.2.0",
+    "lucide-vue-next": "^0.294.0",
+    "pinia": "^2.3.1",
     "playwright": "^1.40.0",
     "postcss": "^8.5.6",
     "typescript": "^5.3.0",
@@ -135,6 +152,14 @@
     "vite-plugin-electron-renderer": "^0.14.6",
     "vitest": "^4.0.15",
     "vitest-canvas-mock": "^1.1.3",
+    "vue": "^3.4.0",
+    "vue-i18n": "^9.14.5",
     "wait-on": "^7.2.0"
-  }
+  },
+  "files": [
+    "dist/mcp-bridge.cjs",
+    "dist/mcp-bridge.cjs.map",
+    "scripts/download-binary.js",
+    "binaries/"
+  ]
 }
