--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,8 @@ jobs:
   release:
     name: "Build & Release"
     needs: test
+    permissions:
+      contents: write
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -95,24 +97,18 @@ jobs:
       
       - name: Package application (Linux)
         if: runner.os == 'Linux'
-        run: npx electron-builder --linux zip --x64
+        run: npx electron-builder --linux zip --x64 --publish never
         working-directory: ./apps/gui
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Package application (macOS)
         if: runner.os == 'macOS'
-        run: npx electron-builder --mac zip --x64 --arm64
+        run: npx electron-builder --mac zip --x64 --arm64 --publish never
         working-directory: ./apps/gui
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Package application (Windows)
         if: runner.os == 'Windows'
-        run: npx electron-builder --win zip --x64
+        run: npx electron-builder --win zip --x64 --publish never
         working-directory: ./apps/gui
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
