feat: add custom command initialization for AI agent platforms
- Add CLI command handler (scripts/cli.mjs) with init subcommand
- Support Claude Code (.claude/commands/*.md) and Gemini CLI (.gemini/commands/*.toml)
- Implement platform-specific custom prompt templates:
  * /whiteboard: Opens visual whiteboard window
  * /check-board: Analyzes whiteboard content with optional user message
- Use official argument syntax ($ARGUMENTS for Claude Code, {{args}} for Gemini CLI)
- Update package.json bin entry to point to new CLI wrapper
- Add .gitignore and .npmignore rules to exclude generated command configs
- Generate commands in project directory only (not global)

Usage: npx promptboard init <claude-code|gemini-cli>

--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -19,7 +19,7 @@
   ],
   "main": "dist-electron/main/index.mjs",
   "bin": {
-    "promptboard": "./dist/mcp-bridge.cjs"
+    "promptboard": "./scripts/cli.mjs"
   },
   "scripts": {
     "dev": "vite",
