fix: exclude downloaded binaries from npm package
- Update package.json files field to only include binaries/.gitkeep
- Remove binaries/ directory from npm package (300x size reduction)
- Add scripts/cli.mjs to files list
- Binaries are now downloaded via postinstall script only

Package size reduced from 123MB to 375KB

--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -160,6 +160,7 @@
     "dist/mcp-bridge.cjs",
     "dist/mcp-bridge.cjs.map",
     "scripts/download-binary.js",
-    "binaries/"
+    "scripts/cli.mjs",
+    "binaries/.gitkeep"
   ]
 }
