--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -8,79 +7,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  lint-and-type-check:
-    name: "Lint & Type Check"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-      - name: Install dependencies
-        run: |
-          npm ci
-          npm install --no-save @rollup/rollup-linux-x64-gnu
-      - name: Run Lint
-        run: npm run lint
-        working-directory: ./apps/gui
-      - name: Run Type Check
-        run: npm run type-check
-        working-directory: ./apps/gui
-
-  unit-tests:
-    name: "Unit Tests"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-      - name: Install dependencies
-        run: |
-          npm ci
-          npm install --no-save @rollup/rollup-linux-x64-gnu
-      - name: Run Unit Tests
-        run: npm run test:unit
-        working-directory: ./apps/gui
-
-  e2e-tests:
-    name: "E2E Tests"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev xvfb
-      - name: Install dependencies
-        run: |
-          npm ci
-          npm install --no-save @rollup/rollup-linux-x64-gnu
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
-        working-directory: ./apps/gui
-      - name: Build the application
-        run: npm run build
-        working-directory: ./apps/gui
-      - name: Run E2E Tests
-        run: xvfb-run --auto-servernum npm run test:e2e
-        working-directory: ./apps/gui
-      - name: Upload test results
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: apps/gui/playwright-report/
-          retention-days: 30
+  tests:
+    uses: ./.github/workflows/_quality-checks.yml
+    with:
+      run_lint: true
+      run_unit: true
+      run_e2e: true
