--- a/packages/core-whiteboard/package.json
+++ b/packages/core-whiteboard/package.json
@@ -2,6 +2,7 @@
   "name": "@promptboard/core-whiteboard",
   "version": "0.2.2",
   "description": "Shared Vue components and Fabric.js logic for Promptboard",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
