test: add comprehensive e2e test suite for GUI application
Add extensive end-to-end tests covering core whiteboard functionality:
- Drawing tools (pen, eraser, line, rectangle, circle, text)
- Image operations (paste, drag, resize, rotate, delete)
- Keyboard shortcuts and navigation
- Save/load functionality with file persistence
- Undo/redo operations across all tools

Also includes:
- Shared test helpers for common operations
- Test data attributes for reliable element selection
- Configuration updates for Playwright test environment

--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -30,9 +30,9 @@
     "postinstall": "node scripts/download-binary.js",
     "type-check": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx,.vue",
-    "test": "vitest run && playwright test",
+    "test": "npm run build && vitest run && playwright test",
     "test:unit": "vitest run",
-    "test:e2e": "playwright test"
+    "test:e2e": "npm run build && playwright test"
   },
   "build": {
     "appId": "com.promptboard.app",
