--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "type": "module",
   "scripts": {
     "dev": "npm run dev --workspace=@promptboard/gui",
-    "build": "npm run build --workspaces",
-    "test": "npm run test --workspaces",
-    "type-check": "npm run type-check --workspaces",
-    "lint": "npm run lint --workspaces"
+    "build": "npm run build --workspaces --if-present",
+    "build:packages": "npm run build --workspace=packages/core-whiteboard",
+    "test": "npm run build:packages && npm run test --workspaces --if-present",
+    "type-check": "npm run type-check --workspaces --if-present",
+    "lint": "npm run lint --workspaces --if-present"
   },
   "workspaces": [
     "packages/*",
@@ -17,6 +18,7 @@
   ],
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "jsdom": "^27.3.0",
     "typescript": "^5.3.0"
   }
 }
