--- a/packages/core-whiteboard/package.json
+++ b/packages/core-whiteboard/package.json
@@ -1,28 +1,40 @@
 {
   "name": "@promptboard/core-whiteboard",
-  "version": "0.3.0",
-  "description": "Shared Vue components and Fabric.js logic for Promptboard",
-  "license": "Apache-2.0",
-  "main": "dist/index.js",
+  "version": "0.1.0",
+  "description": "Framework-agnostic whiteboard engine powered by Fabric.js",
   "type": "module",
-  "scripts": {
-    "build": "echo \"No build config yet in core-whiteboard\" && exit 0",
-    "test": "echo \"No tests yet in core-whiteboard\" && exit 0",
-    "type-check": "tsc --noEmit",
-    "lint": "echo \"No lint config yet in core-whiteboard\" && exit 0"
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
   },
-  "dependencies": {
-    "vue": "^3.4.0",
-    "pinia": "^2.1.0",
-    "fabric": "^5.3.0",
-    "lucide-vue-next": "^0.294.0",
-    "vue-i18n": "^9.8.0"
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "type-check": "tsc --noEmit",
+    "test": "vitest run"
+  },
+  "peerDependencies": {
+    "fabric": "^5.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.0",
-    "vite": "^5.0.0",
+    "@types/node": "^20.10.0",
     "typescript": "^5.3.0",
-    "vitest": "^1.0.0",
-    "@vue/test-utils": "^2.4.0"
-  }
+    "vitest": "^4.0.15",
+    "vitest-canvas-mock": "^1.1.3"
+  },
+  "keywords": [
+    "whiteboard",
+    "canvas",
+    "drawing",
+    "fabric.js"
+  ],
+  "license": "Apache-2.0"
 }
